--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@ngx-share/button": "^7.1.2",
     "@ngx-share/buttons": "^7.1.2",
     "@ngx-share/core": "^7.1.2",
+    "@tinkoff/ng-dompurify": "^2.1.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "dompurify": "^2.0.8",
     "firebase": "^6.1.0",
     "hammerjs": "^2.0.8",
     "ngx-pagination": "^4.0.0",
@@ -46,6 +48,7 @@
     "@angular/cli": "^8.0.4",
     "@angular/compiler-cli": "~8.0.2",
     "@angular/language-service": "~8.0.2",
+    "@types/dompurify": "^2.0.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
